[package]
name = "get_data"
version = "0.1.0"
authors = ["Micah Wylde <micah@micahw.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.10"
log = "0.4"
env_logger = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.3.0"
chrono = "0.4.6"
rayon = "1.0"

